# flint-realtime-fabric

./: .dockerignore  .gitignore  .wasm-size-baseline.example  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  compose.yml  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.criterion/apply_delta/report/: index.html
.criterion/apply_delta_empty_base/report/: index.html
.github/workflows/: ci.yml
.kbd-orchestrator/: current-waypoint.json  project.json
.kbd-orchestrator/phases/phase-0-realtime-fabric-foundations/: assessment.md  execution.md  goals.md  hooks.log.jsonl  plan.md  progress.json  reflection.md
.kbd-orchestrator/phases/phase-1-core-infrastructure-adapters/: assessment.md  execution.md  goals.md  plan.md  progress.json  reflection.md
.kbd-orchestrator/phases/phase-10-e2e-layer2-wasm-federation/: assessment.md  goals.md  plan.md  progress.json  reflection.md
.kbd-orchestrator/phases/phase-11-layer3-e2e-wasm-opt-cdc/: assessment.md  goals.md  plan.md  progress.json  reflection.md
.kbd-orchestrator/phases/phase-12-layer3-e2e-runtime-wasm-gate-cdc-smoke/: assessment.md  execution.md  goals.md  plan.md  progress.json  reflection.md
.kbd-orchestrator/phases/phase-13-live-layer3-e2e-validation/: assessment.md  execution.md  goals.md  plan.md  progress.json  reflection.md
.kbd-orchestrator/phases/phase-14-stage10-dind-live-triage/: assessment.md  goals.md  plan.md  progress.json
.kbd-orchestrator/phases/phase-2-generated-sdks/: assessment.md  execution.md  goals.md  plan.md  progress.json  reflection.md
.kbd-orchestrator/phases/phase-3-ffi-sdks-crdt/: assessment.md  execution.md  goals.md  plan.md  progress.json  reflection.md
admin-ui/: eslint.config.mjs  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
admin-ui/e2e/: layer2-agent.spec.ts  layer2-crdt.spec.ts  layer2-publish.spec.ts  layer2-subscribe.spec.ts  p7-smoke.spec.ts  phase4-smoke.spec.ts  phase5-smoke.spec.ts  phase6-smoke.spec.ts  signaling.spec.ts
admin-ui/src/: App.tsx  main.tsx
crates/frf-agentproto/: Cargo.toml
crates/frf-agentproto/src/: content_block.rs  convert.rs  error.rs  lib.rs
crates/frf-app/: Cargo.toml
crates/frf-app/src/: error.rs  lib.rs  publish.rs  subscribe.rs  sync.rs
crates/frf-app/tests/: publish_usecase.rs  subscribe_pipeline.rs
crates/frf-authz-keto/: Cargo.toml
crates/frf-authz-keto/src/: cache.rs  lib.rs  provider.rs  types.rs
crates/frf-authz-keto/tests/: keto_provider.rs
crates/frf-bridge-atproto/: Cargo.toml
crates/frf-bridge-atproto/src/: convert.rs  error.rs  jetstream.rs  lib.rs
crates/frf-bridge-matrix/: Cargo.toml
crates/frf-bridge-matrix/src/: client.rs  convert.rs  error.rs  lib.rs
crates/frf-broker-iggy/: Cargo.toml
crates/frf-broker-iggy/src/: broker.rs  channel.rs  error.rs  lib.rs
crates/frf-broker-iggy/tests/: channel_mapping.rs  publish_subscribe.rs
crates/frf-crdt/: Cargo.toml
crates/frf-crdt/benches/: crdt_merge.rs
crates/frf-crdt/src/: apply.rs  error.rs  lib.rs  merge.rs  store.rs
crates/frf-crdt/tests/: roundtrip.rs
crates/frf-domain/: Cargo.toml
crates/frf-domain/src/: agent.rs  entity.rs  envelope.rs  ids.rs  lib.rs  presence.rs  signal.rs  sync.rs
crates/frf-domain/tests/: serde_roundtrip.rs
crates/frf-ffi/: Cargo.toml
crates/frf-ffi/src/: crdt.rs  error.rs  lib.rs
crates/frf-gateway/: Cargo.toml
crates/frf-gateway/src/: agent_grpc_service.rs  config.rs  error.rs  grpc_service.rs  lib.rs  main.rs  signal_service.rs  sync_grpc_service.rs  ws.rs
crates/frf-gateway/src/routes/: agents.rs  dev.rs  health.rs  mod.rs  publish.rs  subscribe.rs
crates/frf-gateway/tests/: health.rs  signal_mux.rs  subscribe_mux.rs
crates/frf-identity-ory/: Cargo.toml
crates/frf-identity-ory/src/: claims.rs  error.rs  jwks.rs  lib.rs  verifier.rs
crates/frf-identity-ory/tests/: verifier.rs
crates/frf-librefang/: Cargo.toml
crates/frf-librefang/src/: bus.rs  error.rs  lib.rs  publisher.rs  registry.rs
crates/frf-librefang/tests/: bus_smoke.rs
crates/frf-media-livekit/: Cargo.toml
crates/frf-media-livekit/src/: adapter.rs  config.rs  error.rs  lib.rs
crates/frf-media-str0m/: Cargo.toml
crates/frf-media-str0m/src/: error.rs  lib.rs  sfu.rs
crates/frf-policy-cedar/: Cargo.toml
crates/frf-policy-cedar/src/: error.rs  lib.rs  policy.cedar
crates/frf-ports/: Cargo.toml
crates/frf-ports/src/: agent_bus.rs  authz.rs  crdt_store.rs  error.rs  federation.rs  identity.rs  lib.rs  log_broker.rs  media.rs  op_store.rs  policy.rs
crates/frf-postgres-cdc/: Cargo.toml
crates/frf-postgres-cdc/src/: config.rs  consumer.rs  decode.rs  lib.rs
crates/frf-postgres-cdc/tests/: cdc_integration.rs  consumer_smoke.rs
crates/frf-proto/: Cargo.toml  build.rs
crates/frf-proto/src/: lib.rs
crates/frf-store-redb/: Cargo.toml
crates/frf-store-redb/src/: error.rs  key.rs  lib.rs  store.rs
crates/frf-store-surreal/: Cargo.toml
crates/frf-store-surreal/src/: error.rs  lib.rs  model.rs  store.rs
crates/frf-wasm/: Cargo.toml  build_wasm.sh
crates/frf-wasm/src/: agent.rs  crdt.rs  lib.rs  publish.rs  subscribe.rs
crates/frf-wasm/tests/: crdt_binding.rs
crates/uniffi-bindgen/: Cargo.toml
dagger/: README.md  codegen.ts  package-lock.json  package.json
docs/: DEVELOPMENT.md  IMPLEMENTATION-PLAN.md  PROMETHEUS-BASE-RULES.md  flint-realtime-fabric-implementation-plan.html
docs/decisions/: adr-001-crdt-engine.md  adr-002-agent-bus-tenant-isolation.md
openspec/: config.yaml
proto/: buf.gen.yaml  buf.yaml
scripts/: bench-regression-check.sh  smoke-cdc.sh
sdks/csharp/: FlintSdk.slnx
sdks/dart/: .gitignore  GENERATED.md  build_dart.sh  pubspec.yaml
sdks/entity-management/: package.json
sdks/go/: go.mod
sdks/kotlin/: .editorconfig  .gitignore  build.gradle.kts  build_jni.sh  settings.gradle.kts
sdks/swift/: .gitignore  Package.swift  build_xcframework.sh
sdks/ts/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
tests/crdt/: KotlinSmoke.kt  SwiftSmoke.swift  dart_smoke_test.dart  roundtrip.rs
tests/e2e/: README.md  smoke_test.sh
(+292 files in other folders)
