[workspace]
resolver = "2"
members = [
    "crates/frf-domain",
    "crates/frf-ports",
    "crates/frf-proto",
    "crates/frf-gateway",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/prometheusags/flint-realtime-fabric"
rust-version = "1.85"

[workspace.dependencies]
# Web / gateway
axum = { version = "0.8.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-br"] }

# Async runtime
tokio = { version = "1.52", features = ["full"] }
tokio-stream = "0.1"

# gRPC / proto
tonic = { version = "0.14", features = ["transport", "tls-ring"] }
prost = "0.14"
prost-types = "0.14"

# Actors
ractor = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Bytes / networking
bytes = "1.11"
http = "1.2"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# IDs / time
uuid = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Concurrency
dashmap = "6"

# Event spine (GQAdonis fork)
iggy = { git = "https://github.com/GQAdonis/iggy", branch = "master" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
