[package]
name = "frf-authz-keto"
description = "Adapter: AuthzProvider → Ory Keto (Zanzibar REST API)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
frf-domain = { path = "../frf-domain" }
frf-ports = { path = "../frf-ports" }
reqwest.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true

[dev-dependencies]
httpmock.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
