[package]
name = "frf-bridge-atproto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ATProto/Bluesky Jetstream federation bridge — implements FederationBridge via WebSocket consumer"

[dependencies]
frf-domain = { path = "../frf-domain" }
frf-ports = { path = "../frf-ports" }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
async-stream = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tokio-tungstenite = { workspace = true }

[lints.clippy]
pedantic = "warn"
