[package]
name = "frf-broker-iggy"
description = "Adapter: LogBroker → Apache Iggy (GQAdonis fork)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
frf-domain = { path = "../frf-domain" }
frf-ports = { path = "../frf-ports" }
iggy.workspace = true
async-trait.workspace = true
bytes.workspace = true
anyhow.workspace = true
async-stream.workspace = true
futures-util.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }
tokio-stream.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
uuid.workspace = true
futures-util.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
