[package]
name = "frf-crdt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Loro CRDT engine adapter for Flint Realtime Fabric"

[dependencies]
frf-ports = { path = "../frf-ports" }
frf-domain = { path = "../frf-domain" }
loro = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
loro = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "crdt_merge"
harness = false

[lints.clippy]
pedantic = "warn"
