[package]
name = "frf-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Axum 0.8.8 gateway: HTTP + WebSocket mux + gRPC stub for Flint Realtime Fabric"

[lib]
name = "frf_gateway"
path = "src/lib.rs"

[[bin]]
name = "frf-gateway"
path = "src/main.rs"

[dependencies]
frf-domain = { path = "../frf-domain" }
frf-ports = { path = "../frf-ports" }
frf-app = { path = "../frf-app" }
frf-proto = { path = "../frf-proto" }
frf-broker-iggy = { path = "../frf-broker-iggy" }
frf-authz-keto = { path = "../frf-authz-keto" }
frf-identity-ory = { path = "../frf-identity-ory" }
axum = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = "0.14"
anyhow = { workspace = true }
chrono = { workspace = true }
tokio-stream = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
axum-test = "17"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = "0.26"
