[package]
name = "frf-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Axum 0.8.8 gateway: HTTP + WebSocket mux + gRPC stub for Flint Realtime Fabric"

[lib]
name = "frf_gateway"
path = "src/lib.rs"

[[bin]]
name = "frf-gateway"
path = "src/main.rs"

[dependencies]
frf-domain = { path = "../frf-domain" }
frf-ports = { path = "../frf-ports" }
frf-agentproto = { path = "../frf-agentproto" }
frf-librefang = { path = "../frf-librefang" }
frf-app = { path = "../frf-app" }
frf-proto = { path = "../frf-proto" }
frf-crdt = { path = "../frf-crdt" }
frf-postgres-cdc = { path = "../frf-postgres-cdc" }
frf-media-livekit = { path = "../frf-media-livekit" }
frf-media-str0m = { path = "../frf-media-str0m" }
frf-store-surreal = { path = "../frf-store-surreal" }
frf-broker-iggy = { path = "../frf-broker-iggy" }
frf-bridge-matrix = { path = "../frf-bridge-matrix" }
frf-bridge-atproto = { path = "../frf-bridge-atproto" }
frf-authz-keto = { path = "../frf-authz-keto" }
frf-identity-ory = { path = "../frf-identity-ory" }
frf-policy-cedar = { path = "../frf-policy-cedar" }
axum = { workspace = true }
prost-types = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = "0.14"
anyhow = { workspace = true }
chrono = { workspace = true }
tokio-stream = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
dev-endpoints = []

[dev-dependencies]
axum-test = "17"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = "0.26"
tokio-stream = { workspace = true, features = ["net"] }
async-trait = { workspace = true }
chrono = { workspace = true }
