[package]
name = "frf-identity-ory"
description = "Adapter: IdentityVerifier → Ory Oathkeeper (JWKS JWT verification)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
frf-domain = { path = "../frf-domain" }
frf-ports = { path = "../frf-ports" }
jsonwebtoken.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true

[dev-dependencies]
httpmock.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
