[package]
name = "frf-media-livekit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "LiveKit hosted SFU adapter implementing the MediaSignaler port"

[dependencies]
frf-domain = { path = "../frf-domain" }
frf-ports = { path = "../frf-ports" }
livekit-api = "0.5.2"
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }
dashmap = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
