[package]
name = "frf-postgres-cdc"
description = "Adapter: Postgres WAL logical replication → EventEnvelope → LogBroker spine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
frf-domain = { path = "../frf-domain" }
frf-ports = { path = "../frf-ports" }
tokio-postgres.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bytes.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
