[package]
name = "frf-store-redb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "On-device redb op-log adapter for Flint Realtime Fabric"

[dependencies]
frf-ports = { path = "../frf-ports" }
frf-domain = { path = "../frf-domain" }
redb = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros"] }

[lints.clippy]
pedantic = "warn"
