[package]
name = "uniffi-bindgen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "UniFFI bindgen binary for generating Swift/Kotlin/Dart bindings from frf-ffi"

[[bin]]
name = "uniffi-bindgen"
path = "src/main.rs"

[dependencies]
uniffi = { version = "0.31.2", features = ["cli"] }
